fix: replace getFirst()/getLast() with Java 17 compatible methods